src/_reset.scss
* {
	margin: 0;
	padding: 0;
	border: none;
	outline: none;
	text-decoration: none;
	list-style: none;
	font-family: 'Karla', sans-serif;
	font-style: normal;
	font-weight: normal;
}

h1, h2, h3, h4, h5, h6 {
	font-family: 'Titan One', cursive;
}

body {
	background: #161125;
}

.wrp {
	width: 1100px;
	margin: auto;
	box-sizing: border-box;
	display: block;

	@media screen and (max-width: 1280px) {
		width: 100%;
	}
}

.clr {
	clear: both;
}

.notify-btn {
	width: 240px;
	display: block;
	height: 68px;
	margin: 40px auto 20px auto;
	transition: opacity .25s;

	&:hover {
		opacity: .8;
		transition: opacity .25s;
	}
}

